# poe-api-rust

./: Cargo.toml  README.md
src/: api.rs  bot.rs  bundles.rs  chat.rs  constants.rs  history.rs  lib.rs  main.rs  message.rs  queries.rs  search.rs  utils.rs
src/models/: api_settings.rs  message.rs  mod.rs  on_message.rs  query.rs  user.rs
